The News Report App 2

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -24,9 +24,11 @@
     "About":"عن التطبيق ",
     "Service Provider":"مقدم الخدمة ",
     "country":"الدولة",
+    "No Internet connection":"لا يوجد اتصال بالانترنت",
     "version":"الاصدار",
     "Dark Mode":"الوضع الليلى",
     "app name":"تقرير الاخبار",
+    "No Artical Saved":"لا توجد مقالات محفوظة",
     "about_us": "تطبيق تقرير اخبارى هو تطبيق هيساعدك تطلع على اخبار العالم زي مصر او الولايات المتحدة  وتقدر من خلال التطبيق تحتفظ بكل المقالات اللي معجب بيها , تقدر من خلال التطبيق تبحث عن اي موضوع وتحتفظ بيه كمان ولو حابب تقرأ اكتر عن الموضوع تقدر تزور مصدر الخبر والجهة الناشرة له.",
     "badRequestException": "عفوًا ، طلب غير صالح",
     "unauthorisedException": "عفوًا ، غير مصرح لك",
