--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -25,6 +25,7 @@
     "About":"About",
     "Sreach":"Sreach",
     "share":"share",
+    "No Artical Saved":"No Artical Saved",
     "Try Again":"Try Again",
     "Item Deleted":"Artical Deleted",
     "Item Saved":"Artical Saved",
@@ -35,6 +36,7 @@
     "Service Provider":"Service Provider",
     "country":"country",
     "Dark Mode":"Dark Mode",
+    "No Internet connection":"No Internet connection",
     "badRequestException": "Oops, invalid request",
     "unauthorisedException": "Oops, unauthorised",
     "fetchDataException": "Oops, an error occurred while connecting to the server",
