- Update article card UI - Remove arabic lange - Upload new release on store

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -28,7 +28,7 @@
     "version":"الاصدار",
     "Dark Mode":"الوضع الليلى",
     "app name":"تقرير الاخبار",
-    "No Artical Saved":"لا توجد مقالات محفوظة",
+    "No Article Saved":"لا توجد مقالات محفوظة",
     "about_us": "تطبيق تقرير اخبارى هو تطبيق هيساعدك تطلع على اخبار العالم زي مصر او الولايات المتحدة  وتقدر من خلال التطبيق تحتفظ بكل المقالات اللي معجب بيها , تقدر من خلال التطبيق تبحث عن اي موضوع وتحتفظ بيه كمان ولو حابب تقرأ اكتر عن الموضوع تقدر تزور مصدر الخبر والجهة الناشرة له.",
     "badRequestException": "عفوًا ، طلب غير صالح",
     "unauthorisedException": "عفوًا ، غير مصرح لك",
@@ -40,9 +40,9 @@
     "Sreach":"بحث",
     "share":"مشاركة",
     "Item Saved":"تم حفظ العنصر",
-    "visit Artical":"تصفح",
+    "visit Article":"تصفح",
     "Try Again":"حاول مره اخرى",
-    "Save Artical":"حفظ العنصر",
+    "Save Article":"حفظ العنصر",
     "Item Deleted":"تم حزف العنصر"
 
     
