--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -25,14 +25,14 @@
     "About":"About",
     "Sreach":"Sreach",
     "share":"share",
-    "No Artical Saved":"No Artical Saved",
+    "No Article Saved":"No Article Saved",
     "Try Again":"Try Again",
-    "Item Deleted":"Artical Deleted",
-    "Item Saved":"Artical Saved",
+    "Item Deleted":"Article Deleted",
+    "Item Saved":"Article Saved",
     "app name":"News Report",
-    "about_us": "A news application is an application that will help you look at world news such as Egypt, the United States . Through the application, you can keep all the articles that you like. Through the application, you can search for any topic and keep it as well. If you want to read more about the topic, you can visit the source of the news and the publisher for him.",
-    "Save Artical":"Save Artical",
-    "visit Artical":"visit Artical",
+    "about_us": "A news application is an application that will help you look at world news such as Egypt, the United States . Through the application, you can keep all the Articles that you like. Through the application, you can search for any topic and keep it as well. If you want to read more about the topic, you can visit the source of the news and the publisher for him.",
+    "Save Article":"Save Article",
+    "visit Article":"visit Article",
     "Service Provider":"Service Provider",
     "country":"country",
     "Dark Mode":"Dark Mode",
