- remove contact info - update code version

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -29,11 +29,11 @@
     "Try Again":"Try Again",
     "Item Deleted":"Article Deleted",
     "Item Saved":"Article Saved",
-    "app name":"News Report",
-    "about_us": "A news application is an application that will help you look at world news such as Egypt, the United States . Through the application, you can keep all the Articles that you like. Through the application, you can search for any topic and keep it as well. If you want to read more about the topic, you can visit the source of the news and the publisher for him.",
+    "app name":"News Today Now",
+    "about_us": "A news application is an application that will helps you look at the United States News . Through the application, you can keep all the Articles that you like. Through the application, you can search for any topic and keep it as well. If you want to read more about the topic, you can visit the source of the news and the publisher for him.",
     "Save Article":"Save Article",
     "visit Article":"visit Article",
-    "Service Provider":"Service Provider",
+    "Service Provider":"Service News Provider",
     "country":"country",
     "Dark Mode":"Dark Mode",
     "No Internet connection":"No Internet connection",
